<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NEWS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read More</string>
    <string name="overview">Overview</string>
    <string name="newsdetails">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="home">Home</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="entertain">Entertainment</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="tech">Technology</string>
    <string name="all_news">Top News</string>
    <string name="bookmark">Bookmarks</string>
    <string name="setting">Setting</string>
    <string name="news_details">News Details</string>
    <string name="search">Search</string>
    <string name="select_country">Preferred Country For Top News</string>
    <string name="settings">Settings</string>
    <string name="voice_search">Voice Search</string>
    <string name="home_menu">Home</string>
    <string name="bookmark_menu">BookMark</string>
    <string name="settings_menu">Settings</string>
    <string name="share_now">Share Now</string>
    <string name="read_more_btn">READ MORE ...</string>
    <string name="tell_query">Tell me your query</string>
    <string name="network_conncetion">Network Connection</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="disable_dark_mode">Disable dark mode</string>
    <string name="prefered_layout">Prefered Layout</string>
    <string name="google_maps_key">AIzaSyB9c3UKWZpXrGOHbwQBQIsObPC_5ph2hwQ</string>
</resources>