<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.mdasrafulalam.news.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_bookMarkFragment"
            app:destination="@id/bookMarkFragment" />
    </fragment>
    <fragment
        android:id="@+id/businessFragment"
        android:name="com.mdasrafulalam.news.ui.BusinessFragment"
        android:label="@string/business"
        tools:layout="@layout/fragment_business" >
        <action
            android:id="@+id/action_businessFragment_to_healthFragment"
            app:destination="@id/healthFragment" />
        <action
            android:id="@+id/action_businessFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/healthFragment"
        android:name="com.mdasrafulalam.news.ui.HealthFragment"
        android:label="@string/health"
        tools:layout="@layout/fragment_health" >
        <action
            android:id="@+id/action_healthFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/entertainmentFragment"
        android:name="com.mdasrafulalam.news.ui.EntertainmentFragment"
        android:label="@string/entertain"
        tools:layout="@layout/fragment_entertainment" >
        <action
            android:id="@+id/action_entertainmentFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/scienceFragment"
        android:name="com.mdasrafulalam.news.ui.ScienceFragment"
        android:label="@string/science"
        tools:layout="@layout/fragment_science" >
        <action
            android:id="@+id/action_scienceFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_scienceFragment_to_sportsFragment"
            app:destination="@id/sportsFragment" />
        <action
            android:id="@+id/action_scienceFragment_to_technologyFragment"
            app:destination="@id/technologyFragment" />
    </fragment>
    <fragment
        android:id="@+id/sportsFragment"
        android:name="com.mdasrafulalam.news.ui.SportsFragment"
        android:label="@string/sports"
        tools:layout="@layout/fragment_sports" >
        <action
            android:id="@+id/action_sportsFragment_to_scienceFragment"
            app:destination="@id/scienceFragment" />
        <action
            android:id="@+id/action_sportsFragment_to_technologyFragment"
            app:destination="@id/technologyFragment" />
    </fragment>
    <fragment
        android:id="@+id/technologyFragment"
        android:name="com.mdasrafulalam.news.ui.TechnologyFragment"
        android:label="@string/tech"
        tools:layout="@layout/fragment_technology" />
    <fragment
        android:id="@+id/allNewsFragment"
        android:name="com.mdasrafulalam.news.ui.AllNewsFragment"
        android:label="@string/all_news"
        tools:layout="@layout/fragment_all_news" >
        <action
            android:id="@+id/action_allNewsFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookMarkFragment"
        android:name="com.mdasrafulalam.news.ui.BookMarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_book_mark" >
        <action
            android:id="@+id/action_bookMarkFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.mdasrafulalam.news.ui.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.mdasrafulalam.news.ui.NewsDetailsFragment"
        android:label="@string/news_details"
        tools:layout="@layout/fragment_news_details" >
        <action
            android:id="@+id/action_newsDetailsFragment_to_allNewsFragment"
            app:destination="@id/allNewsFragment" />
        <argument
            android:name="newsItem"
            app:argType="com.mdasrafulalam.news.model.News" />
        <action
            android:id="@+id/action_newsDetailsFragment_to_webViewFragment"
            app:destination="@id/webViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.mdasrafulalam.news.ui.WebViewFragment"
        android:label="Full News"
        tools:layout="@layout/fragment_web_view" >
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
</navigation>