<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/house"
        android:title="@string/home_menu"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/bookMarkFragment"
        android:icon="@drawable/bookmark_image"
        android:title="@string/bookmark_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/setting_img"
        android:title="@string/settings_menu"
        app:showAsAction="always" />
</menu>