<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/settingsFragmentLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A5D6A7"
        android:orientation="vertical"
        tools:context=".ui.SettingsFragment">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:src="@drawable/settings"
            android:textColor="@color/black"
            android:textSize="50sp" />
        <RelativeLayout
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_tab_text"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/themeSwitch"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/enable_dark_mode"
                android:thumbTint="@color/swipe_color_4"
                android:padding="8dp"
                android:textSize="25sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </RelativeLayout>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:background="@color/color_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/select_country"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_marginEnd="@dimen/dp_5"
                android:textStyle="italic" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="30sp" />
        </LinearLayout>
        <LinearLayout
            android:weightSum="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:background="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/prefered_layout"/>
            <ImageView
                android:id="@+id/preferedLayout"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:src="@drawable/ic_grid_layout"
                android:layout_height="80dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>